docs/ganeti/2.7/html/_sources/man-ganeti-rapi.txt
.. This file is automatically updated at build time from man/ganeti-rapi.gen.
.. Do not edit.

ganeti-rapi
==========================================

Name
----

ganeti-rapi - Ganeti remote API daemon

Synopsis
--------

**ganeti-rapi** [-d] [-f] [\--no-ssl] [-K *SSL_KEY_FILE*] [-C
*SSL_CERT_FILE*]

DESCRIPTION
-----------

**ganeti-rapi** is the daemon providing a remote API for Ganeti
clusters.

It is automatically started on the master node, and by default it
uses SSL encryption. This can be disabled by passing the
``--no-ssl`` option, or alternatively the certificate used can be
changed via the ``-C`` option and the key via the ``-K`` option.

The daemon will listen to the "ganeti-rapi" tcp port, as listed in the
system services database, or if not defined, to port 5080 by default.

See the *Ganeti remote API* documentation for further information.

Requests are logged to ``/var/log/ganeti/rapi-daemon.log``,
in the same format as for the node and master daemon.

ACCESS CONTROLS
---------------

Most query operations are allowed without authentication. Only the
modification operations require authentication, in the form of basic
authentication.

The users and their rights are defined in the
``/var/lib/ganeti/rapi/users`` file. Format of this file is
described in the Ganeti documentation (``rapi.html``).

.. vim: set textwidth=72 :
.. Local Variables:
.. mode: rst
.. fill-column: 72
.. End:
